@@ -28,42 +28,27 @@ dependencies {
 
     compileOnly 'org.derive4j:derive4j-annotation'
     annotationProcessor 'org.derive4j:derive4j'
+    implementation 'com.google.code.findbugs:jsr305'
 }
 
-def exports = [
-        'jdk.compiler/com.sun.tools.javac.file',
-        'jdk.compiler/com.sun.tools.javac.main',
-        'jdk.compiler/com.sun.tools.javac.parser',
-        'jdk.compiler/com.sun.tools.javac.tree',
-        'jdk.compiler/com.sun.tools.javac.util',
-        'jdk.compiler/com.sun.tools.javac.code',
-        'jdk.compiler/com.sun.tools.javac.api'
-]
-
-def jvmArgList = exports.collect { value -> "--add-exports=${value}=ALL-UNNAMED".toString() }
-
-tasks.withType(JavaCompile).configureEach {
-    options.errorprone.disable 'StrictUnusedVariable'
-
-    // Allow access to internal javac apis
-    options.compilerArgs += jvmArgList
-
-    if (JavaVersion.current() < JavaVersion.VERSION_14) {
-        excludes = ['**/Java14InputAstVisitor.java']
-    }
+moduleJvmArgs {
+    exports().addAll(
+            'jdk.compiler/com.sun.tools.javac.file',
+            'jdk.compiler/com.sun.tools.javac.main',
+            'jdk.compiler/com.sun.tools.javac.parser',
+            'jdk.compiler/com.sun.tools.javac.tree',
+            'jdk.compiler/com.sun.tools.javac.util',
+            'jdk.compiler/com.sun.tools.javac.code',
+            'jdk.compiler/com.sun.tools.javac.api')
 }
 
-tasks.withType(Test).configureEach {
-    jvmArgs = jvmArgList
-}
-
-tasks.withType(Javadoc).configureEach {
-    // Allow access to internal javac apis
-    options.optionFiles << file('../gradle/javadoc.options')
-
-    if (JavaVersion.current() < JavaVersion.VERSION_14) {
-        exclude '**/Java14InputAstVisitor.java'
-    }
+tasks.withType(JavaCompile).named('compileJava') {
+    // By setting the source and target compatibility to 11, while still using a higher level
+    // JDK for compilation, we can compile against the AST classes we need to support >11 source
+    // features but still run on 11 JDKs (with the addition of checking the java version at runtime
+    // and dynamically loading the correct formatter implementation)
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
 
 // false positives due to org.junit.runners.* in the test cases
@@ -77,15 +62,6 @@ tasks.named("test") {
     systemProperty 'junit.jupiter.execution.parallel.mode.default', 'concurrent'
 }
 
-// necessary to compile Java14InputAstVisitor
-idea {
-    module.languageLevel = new org.gradle.plugins.ide.idea.model.IdeaLanguageLevel(14)
-}
-
-// This block may be replaced by BaselineExportsExtension exports
-// once https://github.com/gradle/gradle/issues/18824 is resolved.
-tasks.named("jar", Jar) {
-    manifest {
-        attributes('Add-Exports': exports.join(' '))
-    }
+javaVersion {
+    target = 21
 }
